infra/gitops/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ansx-svc
  namespace: ans-uat
spec:
  selector:
    app: web-ansx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
