infra/gitops/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ansx-ingress
  namespace: ans-uat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - web-ansx.anousith.tech
      secretName: logitans-tls
  rules:
    - host: web-ansx.anousith.tech
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-ansx-svc
                port:
                  number: 80
